[package]
name = "question"
version = "0.0.0"
authors = ["Fabian Vilers <fabian.vilers@dev-one.com>"]
edition = "2021"
description = "A package to ask questions on standard streams"
readme = "README.md"
repository = "https://github.com/fvilers/question"
license = "MIT"
keywords = ["streams", "questions"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
